Completed table overview

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,7 @@
    "id": "ec2bcd95",
    "metadata": {},
    "source": [
-    "## Analysing Telco Company's Customer Churn Rate\n",
+    "# Analysing Telco Company's Customer Churn Rate\n",
     "\n",
     "- The goal of this project is to analyse the customer base of the given telco company and to predict the probability of churn.\n",
     "\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "d3e57935",
    "metadata": {},
    "outputs": [],
@@ -54,12 +54,12 @@
    "id": "013ec7a9",
    "metadata": {},
    "source": [
-    "## Dataset overview"
+    "## Database overview"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "0d4f6e3b",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "4      demographics"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "d7ca4d86",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "4     90602  33.972119, -118.020188  33.972119 -118.020188  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "fb21355d",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,6 +526,222 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "66c07a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SERVICE_ID</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CUSTOMER_ID</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>COUNT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>QUARTER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>REFERRED_A_FRIEND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>N_REFERRED</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>MONTHS_TENURE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>OFFER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PHONE_SERVICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>AVG_MONTHLY_LONG_DIST_CHARGE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>MULTIPLE_LINES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>INTERNET_SERVICE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>INTERNET_TYPE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>AVG_MONTHLY_GB_DOWN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>ONLINE_SECURITY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>ONLINE_BACKUP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>DEVICE_PROTECTION</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PREMIUM_TECH_SUPPORT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>STREAMING_TV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>STREAMING_MOVIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>STREAMING_MUSIC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>UNLIMITED_DATA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>CONTRACT_TYPE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>PAPERLESS_BILLING</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>PAYMENT_METHOD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>MONTHLY_CHARGE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>TOTAL_CHARGE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>TOTAL_REFUNDS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>TOTAL_EXTRA_DATA_CHARGES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>TOTAL_LONG_DIST_CHARGES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>TOTAL_REVENUE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Column Name\n",
+       "0                     SERVICE_ID\n",
+       "1                    CUSTOMER_ID\n",
+       "2                          COUNT\n",
+       "3                        QUARTER\n",
+       "4              REFERRED_A_FRIEND\n",
+       "5                     N_REFERRED\n",
+       "6                  MONTHS_TENURE\n",
+       "7                          OFFER\n",
+       "8                  PHONE_SERVICE\n",
+       "9   AVG_MONTHLY_LONG_DIST_CHARGE\n",
+       "10                MULTIPLE_LINES\n",
+       "11              INTERNET_SERVICE\n",
+       "12                 INTERNET_TYPE\n",
+       "13           AVG_MONTHLY_GB_DOWN\n",
+       "14               ONLINE_SECURITY\n",
+       "15                 ONLINE_BACKUP\n",
+       "16             DEVICE_PROTECTION\n",
+       "17          PREMIUM_TECH_SUPPORT\n",
+       "18                  STREAMING_TV\n",
+       "19              STREAMING_MOVIES\n",
+       "20               STREAMING_MUSIC\n",
+       "21                UNLIMITED_DATA\n",
+       "22                 CONTRACT_TYPE\n",
+       "23             PAPERLESS_BILLING\n",
+       "24                PAYMENT_METHOD\n",
+       "25                MONTHLY_CHARGE\n",
+       "26                  TOTAL_CHARGE\n",
+       "27                 TOTAL_REFUNDS\n",
+       "28      TOTAL_EXTRA_DATA_CHARGES\n",
+       "29       TOTAL_LONG_DIST_CHARGES\n",
+       "30                 TOTAL_REVENUE"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql(text(\"\"\"\n",
+    "                 SELECT column_name AS \"Column Name\"\n",
+    "                 FROM information_schema.columns\n",
+    "                 WHERE table_catalog = 'telco-db' AND table_name = 'services'\n",
+    "                 ORDER BY ordinal_position\n",
+    "                 \"\"\"), engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5a2d756",
+   "metadata": {},
+   "source": [
+    "This table contains client-specific information about the service provided and the main information that will be useful when modelling churn."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f11c7b48",
    "metadata": {},
@@ -535,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "32224055",
    "metadata": {},
    "outputs": [
@@ -677,7 +893,7 @@
        "4            Extra data charges  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,6 +908,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "884dac13",
+   "metadata": {},
+   "source": [
+    "This table shows information regarding the currect customer's satisfaction and whether they have or have not churned. Information about the cause of churn is also provided along with customer lifetime value which can also be modelled."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f5c73083",
    "metadata": {},
    "source": [
@@ -700,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "df7c112d",
    "metadata": {},
    "outputs": [
@@ -774,7 +998,7 @@
        "4   5     90005       43019"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,6 +1013,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2aa3a303",
+   "metadata": {},
+   "source": [
+    "This table shows the local population in a given zip code. This can be used to discert more urban areas from more rural ones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9f65d70",
    "metadata": {},
    "source": [
@@ -797,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "a58c3375",
    "metadata": {},
    "outputs": [
@@ -914,7 +1146,7 @@
        "4            Yes             1  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,6 +1157,30 @@
     "                 FROM demographics\n",
     "                 LIMIT 5\n",
     "                 \"\"\"), engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "029703f3",
+   "metadata": {},
+   "source": [
+    "This table describes the person's demographic details such as age, gender and family status."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "410cb4df",
+   "metadata": {},
+   "source": [
+    "## Exploring the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0a2cb90",
+   "metadata": {},
+   "source": [
+    "One way to analyse this data would be merging all tables and performing analysys on Pandas's DataFrame but let's instead perform basic analysis through SQL itself."
    ]
   }
  ],
