Churn causation analysis

--- a/main.ipynb
+++ b/main.ipynb
@@ -1155,6 +1155,188 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f0d7cc49",
+   "metadata": {},
+   "source": [
+    "#### What causes churn?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "452a04e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>churn_category</th>\n",
+       "            <th>churn_reason</th>\n",
+       "            <th>count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Attitude</td>\n",
+       "            <td>Attitude of service provider</td>\n",
+       "            <td>94</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Attitude</td>\n",
+       "            <td>Attitude of support person</td>\n",
+       "            <td>220</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Competitor</td>\n",
+       "            <td>Competitor had better devices</td>\n",
+       "            <td>313</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Competitor</td>\n",
+       "            <td>Competitor made better offer</td>\n",
+       "            <td>311</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Competitor</td>\n",
+       "            <td>Competitor offered higher download speeds</td>\n",
+       "            <td>100</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Competitor</td>\n",
+       "            <td>Competitor offered more data</td>\n",
+       "            <td>117</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dissatisfaction</td>\n",
+       "            <td>Lack of self-service on Website</td>\n",
+       "            <td>29</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dissatisfaction</td>\n",
+       "            <td>Limited range of services</td>\n",
+       "            <td>37</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dissatisfaction</td>\n",
+       "            <td>Network reliability</td>\n",
+       "            <td>72</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dissatisfaction</td>\n",
+       "            <td>Poor expertise of online support</td>\n",
+       "            <td>13</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dissatisfaction</td>\n",
+       "            <td>Poor expertise of phone support</td>\n",
+       "            <td>12</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dissatisfaction</td>\n",
+       "            <td>Product dissatisfaction</td>\n",
+       "            <td>77</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dissatisfaction</td>\n",
+       "            <td>Service dissatisfaction</td>\n",
+       "            <td>63</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Other</td>\n",
+       "            <td>Deceased</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Other</td>\n",
+       "            <td>Don&#x27;t know</td>\n",
+       "            <td>130</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Other</td>\n",
+       "            <td>Moved</td>\n",
+       "            <td>46</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Other</td>\n",
+       "            <td>Poor expertise of online support</td>\n",
+       "            <td>18</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Price</td>\n",
+       "            <td>Extra data charges</td>\n",
+       "            <td>39</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Price</td>\n",
+       "            <td>Lack of affordable download/upload speed</td>\n",
+       "            <td>30</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Price</td>\n",
+       "            <td>Long distance charges</td>\n",
+       "            <td>64</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Price</td>\n",
+       "            <td>Price too high</td>\n",
+       "            <td>78</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Attitude', 'Attitude of service provider', 94),\n",
+       " ('Attitude', 'Attitude of support person', 220),\n",
+       " ('Competitor', 'Competitor had better devices', 313),\n",
+       " ('Competitor', 'Competitor made better offer', 311),\n",
+       " ('Competitor', 'Competitor offered higher download speeds', 100),\n",
+       " ('Competitor', 'Competitor offered more data', 117),\n",
+       " ('Dissatisfaction', 'Lack of self-service on Website', 29),\n",
+       " ('Dissatisfaction', 'Limited range of services', 37),\n",
+       " ('Dissatisfaction', 'Network reliability', 72),\n",
+       " ('Dissatisfaction', 'Poor expertise of online support', 13),\n",
+       " ('Dissatisfaction', 'Poor expertise of phone support', 12),\n",
+       " ('Dissatisfaction', 'Product dissatisfaction', 77),\n",
+       " ('Dissatisfaction', 'Service dissatisfaction', 63),\n",
+       " ('Other', 'Deceased', 6),\n",
+       " ('Other', \"Don't know\", 130),\n",
+       " ('Other', 'Moved', 46),\n",
+       " ('Other', 'Poor expertise of online support', 18),\n",
+       " ('Price', 'Extra data charges', 39),\n",
+       " ('Price', 'Lack of affordable download/upload speed', 30),\n",
+       " ('Price', 'Long distance charges', 64),\n",
+       " ('Price', 'Price too high', 78)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT churn_category, churn_reason, COUNT(*)\n",
+    "FROM status\n",
+    "WHERE churn_value = True\n",
+    "GROUP BY churn_category, churn_reason\n",
+    "ORDER BY churn_category, churn_reason"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3837a5f6",
+   "metadata": {},
+   "source": [
+    "The biggest cause of churn seems to be the lack of competitiveness of our company in the market. According to the customers, other companies either offer more data or their connection is faster. This might indicate that more market research needs to be done in order to investigate what offers or changes would be most attractive to potencial and current clients.\n",
+    "\n",
+    "We also may potencially have an issue with our client support team. We should investigate individual cases where the client was dissatisfied. Maybe the wait time was too long or the support specialist may have been unpleasent, or even our customer might not feel valued."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86046625",
    "metadata": {},
    "source": [
@@ -1163,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "456333d0",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1379,7 @@
        " (True, Decimal('74.44'), Decimal('24.67'))]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "943c144d",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "41ad21d6",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1549,7 @@
        " (True, 'Offer E', 426, Decimal('63.80'), Decimal('24.78'))]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "34eef518",
    "metadata": {},
    "outputs": [
@@ -1449,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "2c2891ed",
    "metadata": {},
    "outputs": [
@@ -1478,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "affe21fd",
    "metadata": {},
    "outputs": [
@@ -1560,7 +1742,7 @@
        " (114, True, '9-12')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "e64fb243",
    "metadata": {},
    "outputs": [
