Service popularity analysis

--- a/main.ipynb
+++ b/main.ipynb
@@ -2071,6 +2071,177 @@
    "source": [
     "We see that churn reasons with regard to tenure categories are distributed around the same. A slightly higher number of customers in the 9 to 12 month category that churned due to 'Competitor' could be attributed to randomness."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff2edb5",
+   "metadata": {},
+   "source": [
+    "#### What types of services are most common?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f28203",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>total_combinations</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>232</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(232,)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT COUNT(*) as total_combinations\n",
+    "FROM\n",
+    "    (\n",
+    "        SELECT\n",
+    "            phone_service,\n",
+    "            unlimited_data,\n",
+    "            internet_service,\n",
+    "            online_security,\n",
+    "            online_backup,\n",
+    "            device_protection,\n",
+    "            premium_tech_support,\n",
+    "            streaming_tv,\n",
+    "            streaming_movies,\n",
+    "            streaming_music\n",
+    "        FROM\n",
+    "            status\n",
+    "            LEFT JOIN services ON status.customer_id = services.customer_id\n",
+    "        WHERE\n",
+    "            churn_value = True\n",
+    "        GROUP BY\n",
+    "            phone_service,\n",
+    "            unlimited_data,\n",
+    "            internet_service,\n",
+    "            online_security,\n",
+    "            online_backup,\n",
+    "            device_protection,\n",
+    "            premium_tech_support,\n",
+    "            streaming_tv,\n",
+    "            streaming_movies,\n",
+    "            streaming_music\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5cec2f0",
+   "metadata": {},
+   "source": [
+    "There is a total of 232 possible combinations of services that our company offers. Let's keep only the core - phone, internet and streaming services."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "be1466ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>phone_service</th>\n",
+       "            <th>internet_service</th>\n",
+       "            <th>streaming_service</th>\n",
+       "            <th>count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Yes</td>\n",
+       "            <td>No</td>\n",
+       "            <td>No</td>\n",
+       "            <td>113</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>No</td>\n",
+       "            <td>Yes</td>\n",
+       "            <td>Yes</td>\n",
+       "            <td>98</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Yes</td>\n",
+       "            <td>Yes</td>\n",
+       "            <td>Yes</td>\n",
+       "            <td>1027</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>No</td>\n",
+       "            <td>Yes</td>\n",
+       "            <td>No</td>\n",
+       "            <td>72</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Yes</td>\n",
+       "            <td>Yes</td>\n",
+       "            <td>No</td>\n",
+       "            <td>559</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Yes', 'No', 'No', 113),\n",
+       " ('No', 'Yes', 'Yes', 98),\n",
+       " ('Yes', 'Yes', 'Yes', 1027),\n",
+       " ('No', 'Yes', 'No', 72),\n",
+       " ('Yes', 'Yes', 'No', 559)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT phone_service,\n",
+    "        internet_service,\n",
+    "        CASE\n",
+    "            WHEN streaming_tv = 'Yes' OR streaming_movies = 'Yes' OR streaming_music = 'Yes' THEN 'Yes'\n",
+    "            ELSE 'No'\n",
+    "        END AS streaming_service,\n",
+    "        COUNT(*)\n",
+    "FROM status LEFT JOIN services ON status.customer_id = services.customer_id\n",
+    "WHERE churn_value = True\n",
+    "GROUP BY phone_service,\n",
+    "        internet_service,\n",
+    "        streaming_service"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "395abbf2",
+   "metadata": {},
+   "source": [
+    "The vast majory of our clients have all three services. `streaming_service` indicates at least one streaming service (tv, movies, music)."
+   ]
   }
  ],
  "metadata": {
