Jupyter cell type changed to SQL

--- a/main.ipynb
+++ b/main.ipynb
@@ -70,7 +70,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "869028cc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -140,7 +144,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "d7ca4d86",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -264,7 +272,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "fb21355d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -498,7 +510,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "66c07a05",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -673,7 +689,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "32224055",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -809,7 +829,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "df7c112d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -891,7 +915,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "a58c3375",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1025,7 +1053,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "3a0e7911",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1110,7 +1142,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "d883a232",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1165,7 +1201,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "452a04e7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1349,7 +1389,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "456333d0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1409,7 +1453,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "943c144d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1433,7 +1481,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "41ad21d6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1635,7 +1687,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "2c2891ed",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1664,7 +1720,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "affe21fd",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1814,7 +1874,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "8cedc3c8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1843,7 +1907,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "4af297be",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2082,9 +2150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f2f28203",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2158,7 +2230,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "be1466ef",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
