Typical customer analysis

--- a/main.ipynb
+++ b/main.ipynb
@@ -1052,6 +1052,108 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18b966a6",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "source": [
+    "#### What is our typical customer?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "8289aee1",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>most_common_gender</th>\n",
+       "            <th>median_age</th>\n",
+       "            <th>most_common_marital_status</th>\n",
+       "            <th>median_dependents</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Male</td>\n",
+       "            <td>46.0</td>\n",
+       "            <td>No</td>\n",
+       "            <td>0.0</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Male', 46.0, 'No', 0.0)]"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "WITH genderTable AS (\n",
+    "    SELECT gender,\n",
+    "        COUNT(*) AS count\n",
+    "    FROM demographics\n",
+    "    GROUP BY gender\n",
+    "    ORDER BY count DESC\n",
+    "    LIMIT 1\n",
+    "),\n",
+    "ageTable AS (\n",
+    "    SELECT PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY age) AS median\n",
+    "    FROM demographics\n",
+    "),\n",
+    "marriedTable AS (\n",
+    "    SELECT is_married,\n",
+    "        COUNT(*) AS count\n",
+    "    FROM demographics\n",
+    "    GROUP BY is_married\n",
+    "    ORDER BY count DESC\n",
+    "    LIMIT 1\n",
+    "),\n",
+    "dependentsTable AS (\n",
+    "    SELECT PERCENTILE_CONT(0.5) WITHIN GROUP (ORDER BY n_dependents) AS median\n",
+    "    FROM demographics\n",
+    ")\n",
+    "SELECT \n",
+    "    genderTable.gender AS most_common_gender,\n",
+    "    ageTable.median AS median_age,\n",
+    "    marriedTable.is_married AS most_common_marital_status,\n",
+    "    dependentsTable.median AS median_dependents\n",
+    "FROM genderTable\n",
+    "CROSS JOIN ageTable\n",
+    "CROSS JOIN marriedTable\n",
+    "CROSS JOIN dependentsTable;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a190646d",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "source": [
+    "We should expect that our *average* is a 46 year-old, usually male, that is not married and has no children."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc10284f",
    "metadata": {},
    "source": [
@@ -2106,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "61de022c",
    "metadata": {},
    "outputs": [
@@ -2255,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "be1466ef",
    "metadata": {
     "vscode": {
@@ -2891,6 +2993,12 @@
     "\n",
     "Data shows that customers are not leaving due to being overcharged for extras but for pricier services as a whole (as we saw before)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c35bbdbd",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
