Changed schema table creation order

--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Analysing Telco Company's Customer Churn Rate\n",
     "\n",
-    "- The goal of this project is to analyse the customer base of the given telco company and to predict the probability of churn.\n",
+    "- The goal of this project is to analyse the customer base of the given telco company.\n",
     "\n",
     "- The dataset was created by IBM and contains information about services provided to 7043 customers in California in Q3. A more detailed description is available on [IBM's website](https://community.ibm.com/community/user/blogs/steven-macko/2019/07/11/telco-customer-churn-1113).\n",
     "\n",
@@ -3557,16 +3557,6 @@
    "metadata": {},
    "source": [
     "When normalized, Los Angeles still shows up in the TOP 5. This could mean that the population size is not at play here and other issues should be investigated."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "283ee019",
-   "metadata": {},
-   "source": [
-    "## Modelling\n",
-    "\n",
-    "With the exploratory data analysis being done we can move onto modelling. Since we are interested in looking at which clients are most likely to churn and what causes churn, we'll model with logistic regression."
    ]
   }
  ],
